Fixing search bar alignment the right way

--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/PolicyFilters.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyFilterBar/PolicyFilters.module.scss
@@ -17,5 +17,6 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-end;
   }
 }
